# bayesian-filters

./: .gitignore  CMakeLists.txt  README.md  conda_ci_env.yml
.github/workflows/: conda-forge-ci.yml
examples/: CMakeLists.txt  ekf_example.cpp  kalman_filter_example.cpp  vfe_example.cpp
include/bayesian-filters/: BayesianFilter.hpp  ExtendedKalmanFilter.h  KalmanFilter.h  LTIModel.h  NonlinearDynModel.h  VariationalFreeEnergyFilter.h  VariationalFreeEnergyFilter.hpp
scripts/: plot_results.py  plot_results_comparison.py
src/: ExtendedKalmanFilter.cpp  KalmanFilter.cpp  LTIModel.cpp  NonlinearDynModel.cpp  VariationalFreeEnergyFilter.cpp
tests/: CMakeLists.txt  test_nl_dyn_model.cpp
